--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "illuminate/support": "^8.0",
         "joomla/di": "~1.3",
         "smpleader/spt": "^0.6.52",
+        "phpmailer/phpmailer": "^6.6.5",
         "smpleader/spt-boilerplate": "0.0.7.2"
     },
     "require-dev": { 
