update upload attachment

--- a/.gitignore
+++ b/.gitignore
@@ -44,9 +44,7 @@ phpdoc-*
 /vendor
 /composer.lock
 /php_modules/config.php
-/media/images2
-/media/images1
-/media/images
+/public/media/*
 
 # Languages #
 administrator/language/*
