--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ phpdoc-*
 /composer.lock
 /php_modules/config.php
 /public/media/*
-!/public/media/default
+!/public/media/default/*
 
 # Languages #
 administrator/language/*
