--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,8 @@
         "illuminate/routing": "^8.0",
         "illuminate/support": "^8.0",
         "joomla/di": "~1.3",
-        "smpleader/spt": "^0.7.0",
-        "phpmailer/phpmailer": "^6.6.5",
-        "smpleader/spt-boilerplate": "0.0.7.2"
+        "smpleader/spt": "^0.8.0",
+        "phpmailer/phpmailer": "^6.6.5"
     },
     "require-dev": { 
         "phpunit/phpunit": "^9.5"
