--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,11 @@
     "require": {
         "php": "^8.0",
         "guzzlehttp/guzzle": "^7.4",
-        "google/apiclient": "^2.13",
-        "illuminate/container": "^8.0",
-        "illuminate/contracts": "^8.0",
-        "illuminate/events": "^8.0",
-        "illuminate/routing": "^8.0",
-        "illuminate/support": "^8.0",
+        "google/apiclient": "^2.13", 
         "joomla/di": "~1.3",
         "smpleader/spt": "^0.8.0",
+        "doctrine/annotations": "^2.0",
+        "doctrine/orm": "^2.15",
         "phpmailer/phpmailer": "^6.6.5"
     },
     "require-dev": { 
@@ -33,7 +30,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "php_modules/"
+            "DTM\\": "php_modules/"
         }
     },
     "autoload-dev": {
